<resources>
    <string name="app_name">My Android Assignment</string>
    <string name="username">Username</string>
    <string name="github_url">github url</string>
    <string name="searchbar_hint">cari pengguna github</string>
    <string name="detail_user">Detail User</string>
    <string name="followers">Followers</string>
    <string name="followers_count">123</string>
    <string name="following">Following</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
</resources>